[gd_scene load_steps=21 format=3 uid="uid://dqy8clwwlvjcb"]

[ext_resource type="Script" path="res://test_junk/archived for now/world_entity_dreamkin_default.gd" id="1_buxrk"]
[ext_resource type="PackedScene" uid="uid://0lvjbqc8s78" path="res://test_junk/debug_3d_text_world.tscn" id="2_56aln"]
[ext_resource type="Script" path="res://Scenes/debug_3d_text_world.gd" id="3_tp365"]
[ext_resource type="PackedScene" uid="uid://dahgwygsnsabn" path="res://Scenes/state_chart_world.tscn" id="4_8woc1"]
[ext_resource type="Script" path="res://Logic/scripts/animations.gd" id="5_lisrw"]
[ext_resource type="PackedScene" uid="uid://b3707fwdhap4h" path="res://UI/status_hud.tscn" id="6_k7blr"]
[ext_resource type="SpriteFrames" uid="uid://xbnydnlduvvj" path="res://Resources/SpriteFrames/dreamkin_placeholder.tres" id="7_0l7j2"]
[ext_resource type="AnimationLibrary" uid="uid://fmaut2uju8nw" path="res://Resources/AnimationLibrary/default_basic.tres" id="8_0q85k"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://cb2bhc37utoc8" path="res://Resources/AnimationNodeStateMachine/default_basic.tres" id="9_xgs4v"]
[ext_resource type="Script" path="res://Logic/scripts/character_animation_tree.gd" id="10_uwsy4"]
[ext_resource type="Script" path="res://Logic/components/components.gd" id="11_cfku7"]
[ext_resource type="Script" path="res://Logic/components/component_state_controller_world.gd" id="12_7p58q"]
[ext_resource type="Script" path="res://Logic/components/component_health.gd" id="13_7uabh"]
[ext_resource type="Script" path="res://Logic/components/component_vis.gd" id="14_pdyyy"]
[ext_resource type="Script" path="res://Logic/components/component_movement_controller.gd" id="15_myrl0"]
[ext_resource type="Script" path="res://Logic/components/component_input_controller_follow.gd" id="16_aanjx"]
[ext_resource type="Script" path="res://Logic/components/component_animation_controller_world.gd" id="17_th576"]
[ext_resource type="Script" path="res://Logic/components/component_physics.gd" id="18_oeyi7"]
[ext_resource type="PackedScene" uid="uid://ci3yj38s28xgq" path="res://Logic/components/component_ability.tscn" id="19_nf3o3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dltsc"]
radius = 0.228715
height = 0.674674

[node name="Dreamkin" type="CharacterBody3D" node_paths=PackedStringArray("my_component_movement_controller", "my_component_input_controller", "my_component_ability", "state_chart", "collider", "animations", "my_component_health", "my_component_vis", "my_component_state_controller_world")]
physics_interpolation_mode = 1
collision_layer = 0
collision_mask = 2
script = ExtResource("1_buxrk")
my_component_movement_controller = NodePath("Components/component_movement_controller")
my_component_input_controller = NodePath("Components/component_input_controller_follow")
my_component_ability = NodePath("Components/component_ability")
state_chart = NodePath("StateChart")
collider = NodePath("CollisionShape3D")
animations = NodePath("Animations")
my_component_health = NodePath("Components/component_health")
my_component_vis = NodePath("Components/component_vis")
my_component_state_controller_world = NodePath("Components/component_state_controller_world")
alignment = "FRIENDS"
classification = "DREAMKIN"

[node name="DEBUG_3D_TEXT_WORLD" parent="." instance=ExtResource("2_56aln")]
script = ExtResource("3_tp365")

[node name="StateChart" parent="." instance=ExtResource("4_8woc1")]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.063571, 0.0287893, 0.00621723)
shape = SubResource("CapsuleShape3D_dltsc")

[node name="Animations" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_lisrw")

[node name="character_sprite_position" type="Node3D" parent="Animations"]

[node name="selector_anchor" type="Marker3D" parent="Animations/character_sprite_position"]

[node name="status_hud" parent="Animations/character_sprite_position" node_paths=PackedStringArray("my_component_health", "my_component_vis", "collider") instance=ExtResource("6_k7blr")]
my_component_health = NodePath("../../../Components/component_health")
my_component_vis = NodePath("../../../Components/component_vis")
collider = NodePath("../../../CollisionShape3D")

[node name="character_animation_sprite" type="AnimatedSprite3D" parent="Animations"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
flip_h = true
shaded = true
alpha_cut = 2
texture_filter = 0
sprite_frames = ExtResource("7_0l7j2")
animation = &"default_idle"
frame = 1

[node name="RemoteTransform3DPosition" type="RemoteTransform3D" parent="Animations/character_animation_sprite"]
remote_path = NodePath("../../character_sprite_position")
update_rotation = false
update_scale = false

[node name="character_animation_player" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../character_animation_sprite")
libraries = {
"": ExtResource("8_0q85k")
}

[node name="character_animation_tree" type="AnimationTree" parent="Animations"]
active = false
root_node = NodePath("../character_animation_sprite")
tree_root = ExtResource("9_xgs4v")
anim_player = NodePath("../character_animation_player")
parameters/Death/TimeScale/scale = 1.0
parameters/Hurt/TimeScale/scale = 1.0
parameters/Idle/TimeScale/scale = 1.0
parameters/Walk/TimeScale/scale = 1.0
script = ExtResource("10_uwsy4")

[node name="Components" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_cfku7")

[node name="component_state_controller_world" type="Node" parent="Components" node_paths=PackedStringArray("my_component_input_controller")]
script = ExtResource("12_7p58q")
my_component_input_controller = NodePath("../component_input_controller_follow")

[node name="component_health" type="Node" parent="Components"]
script = ExtResource("13_7uabh")
max_health = 16

[node name="component_vis" type="Node" parent="Components"]
script = ExtResource("14_pdyyy")
max_vis = 12

[node name="component_movement_controller" type="Node" parent="Components" node_paths=PackedStringArray("my_component_input_controller", "my_component_physics")]
script = ExtResource("15_myrl0")
my_component_input_controller = NodePath("../component_input_controller_follow")
my_component_physics = NodePath("../component_physics")
movespeed = 10

[node name="component_input_controller_follow" type="Node" parent="Components" node_paths=PackedStringArray("my_component_movement_controller")]
script = ExtResource("16_aanjx")
my_component_movement_controller = NodePath("../component_movement_controller")

[node name="component_animation_controller_world" type="Node" parent="Components" node_paths=PackedStringArray("my_component_input_controller")]
script = ExtResource("17_th576")
my_component_input_controller = NodePath("../component_input_controller_follow")

[node name="component_physics" type="Node" parent="Components"]
script = ExtResource("18_oeyi7")

[node name="component_ability" parent="Components" instance=ExtResource("19_nf3o3")]

[connection signal="animation_finished" from="Animations/character_animation_tree" to="Animations/character_animation_tree" method="_on_animation_finished"]
[connection signal="animation_started" from="Animations/character_animation_tree" to="Animations/character_animation_tree" method="_on_animation_started"]
